v1/docs/ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel.md
# ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**StoreMachine** | Pointer to **string** |  | [optional] 
**StorePath** | Pointer to **string** |  | [optional] 
**StoreType** | Pointer to **int32** |  | [optional] 
**Alias** | Pointer to **string** |  | [optional] 
**ChainLevel** | Pointer to **int32** |  | [optional] 
**CertStoreId** | Pointer to **string** |  | [optional] 

## Methods

### NewModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel

`func NewModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel() *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel`

NewModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel instantiates a new ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCertificateRetrievalResponseCertificateStoreInventoryItemModelWithDefaults

`func NewModelsCertificateRetrievalResponseCertificateStoreInventoryItemModelWithDefaults() *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel`

NewModelsCertificateRetrievalResponseCertificateStoreInventoryItemModelWithDefaults instantiates a new ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetStoreMachine

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) GetStoreMachine() string`

GetStoreMachine returns the StoreMachine field if non-nil, zero value otherwise.

### GetStoreMachineOk

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) GetStoreMachineOk() (*string, bool)`

GetStoreMachineOk returns a tuple with the StoreMachine field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetStoreMachine

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) SetStoreMachine(v string)`

SetStoreMachine sets StoreMachine field to given value.

### HasStoreMachine

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) HasStoreMachine() bool`

HasStoreMachine returns a boolean if a field has been set.

### GetStorePath

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) GetStorePath() string`

GetStorePath returns the StorePath field if non-nil, zero value otherwise.

### GetStorePathOk

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) GetStorePathOk() (*string, bool)`

GetStorePathOk returns a tuple with the StorePath field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetStorePath

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) SetStorePath(v string)`

SetStorePath sets StorePath field to given value.

### HasStorePath

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) HasStorePath() bool`

HasStorePath returns a boolean if a field has been set.

### GetStoreType

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) GetStoreType() int32`

GetStoreType returns the StoreType field if non-nil, zero value otherwise.

### GetStoreTypeOk

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) GetStoreTypeOk() (*int32, bool)`

GetStoreTypeOk returns a tuple with the StoreType field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetStoreType

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) SetStoreType(v int32)`

SetStoreType sets StoreType field to given value.

### HasStoreType

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) HasStoreType() bool`

HasStoreType returns a boolean if a field has been set.

### GetAlias

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) GetAlias() string`

GetAlias returns the Alias field if non-nil, zero value otherwise.

### GetAliasOk

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) GetAliasOk() (*string, bool)`

GetAliasOk returns a tuple with the Alias field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetAlias

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) SetAlias(v string)`

SetAlias sets Alias field to given value.

### HasAlias

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) HasAlias() bool`

HasAlias returns a boolean if a field has been set.

### GetChainLevel

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) GetChainLevel() int32`

GetChainLevel returns the ChainLevel field if non-nil, zero value otherwise.

### GetChainLevelOk

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) GetChainLevelOk() (*int32, bool)`

GetChainLevelOk returns a tuple with the ChainLevel field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetChainLevel

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) SetChainLevel(v int32)`

SetChainLevel sets ChainLevel field to given value.

### HasChainLevel

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) HasChainLevel() bool`

HasChainLevel returns a boolean if a field has been set.

### GetCertStoreId

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) GetCertStoreId() string`

GetCertStoreId returns the CertStoreId field if non-nil, zero value otherwise.

### GetCertStoreIdOk

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) GetCertStoreIdOk() (*string, bool)`

GetCertStoreIdOk returns a tuple with the CertStoreId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCertStoreId

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) SetCertStoreId(v string)`

SetCertStoreId sets CertStoreId field to given value.

### HasCertStoreId

`func (o *ModelsCertificateRetrievalResponseCertificateStoreInventoryItemModel) HasCertStoreId() bool`

HasCertStoreId returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


